add listing user pending records
